--- a/src/App.css
+++ b/src/App.css
@@ -36,25 +36,42 @@
     transform: rotate(360deg);
   }
 }
-
-nav {
-  background-color: #333;
-  color: #fff;
+.nav {
+  background-color: #282c34;
+  color: white;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  align-items: stretch;
+  gap: 2rem;
+  padding: 0 1rem;
 }
-
-ul {
+.navtext{
+  color: inherit;
+  text-decoration: none;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding: .25rem;
+}
+.nav ul{
+  padding: 0;
+  margin: 0;
   list-style: none;
   display: flex;
-  padding: 0;
+  gap: 1rem;
 }
 
-li {
-  margin: 0 10px;
+.nav li.active {
+ background-color: #555;
 }
 
-a {
-  color: #fff;
-  text-decoration: none;
+.nav li:hover {
+  background-color: #777;
+ }
+
+.site-title {
+  font-size: 2rem;
 }
+
+
+
