--- a/src/App.css
+++ b/src/App.css
@@ -73,5 +73,26 @@
   font-size: 2rem;
 }
 
+.button {
+  width: 75px;
+  background: #d2d2d2;
+  text-align: center;
+  float: left;
+  color: #000;
+  line-height: 32px; 
+  text-decoration: none;
+  padding:0 20px;
+  border-radius:10px;
+}
+.button:hover{
+  width: 75px;
+  background: #0e567f;
+  color: #fff ;
+  text-align: center;
+  float: left;
+  line-height: 32px;
+  text-decoration: none;
+}
+
 
 
