--- a/src/App.css
+++ b/src/App.css
@@ -74,18 +74,20 @@
 }
 
 .button {
-  width: 75px;
-  background: #d2d2d2;
+  width: 110px;
+  background: white;
   text-align: center;
   float: left;
   color: #000;
   line-height: 32px; 
   text-decoration: none;
-  padding:0 20px;
+  padding:0 40px;
   border-radius:10px;
+  margin-right: 20px;
+  display: inline-block;
 }
 .button:hover{
-  width: 75px;
+  width: 110px;
   background: #0e567f;
   color: #fff ;
   text-align: center;
