--- a/src/App.css
+++ b/src/App.css
@@ -73,27 +73,28 @@
   font-size: 2rem;
 }
 
+.button-container {
+  display: flex; 
+  flex-wrap: wrap;
+  gap: 20px; 
+  justify-content: center; 
+}
+
 .button {
-  width: 110px;
+  width: calc(25% - 20px); 
   background: white;
-  text-align: center;
-  float: left;
+  text-align: center; 
   color: #000;
   line-height: 32px; 
   text-decoration: none;
-  padding:0 40px;
-  border-radius:10px;
-  margin-right: 20px;
-  display: inline-block;
+  padding: 8px 40px; 
+  border-radius: 10px;
+  transition: background 0.3s, color 0.3s; 
+
 }
-.button:hover{
-  width: 110px;
+.button:hover {
   background: #0e567f;
-  color: #fff ;
-  text-align: center;
-  float: left;
-  line-height: 32px;
-  text-decoration: none;
+  color: #fff;
 }
 
 
